Refactored local storage generic dao to work with any persistence method